package com.valentyn;

public interface SaveStrategy {
    void save(Car car);
}
