@startuml

interface SaveStrategy {
    +save(car : Car) : void
}

class ConcreteStrategySaveCSV {
    +save(car : Car) : void
}

class ConcreteStrategySaveXML {
    +save(car : Car) : void
}

class Car {
    -name : String
    -power : int
    +Car(name : String, power : int)
    +getName() : String
    +getPower() : int
}

class SaveContext {
    -strategy : SaveStrategy
    +setStrategy(strategy : SaveStrategy) : void
    +executeSave(car : Car) : void
}

SaveStrategy <|.. ConcreteStrategySaveCSV
SaveStrategy <|.. ConcreteStrategySaveXML
SaveContext o-- SaveStrategy
Car -- SaveContext

@enduml
